--- a/playwright/package.json
+++ b/playwright/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "playwright test"
+    "test": "playwright test",
+    "test:ui": "playwright test --ui",
+    "report" : "playwright show-report"
   },
   "keywords": [],
   "author": "",
